--- a/final_web3/public/css/custom-learning-chapter.css
+++ b/final_web3/public/css/custom-learning-chapter.css
@@ -134,30 +134,29 @@ header {
 /* THUMBNAIL */
 #text-inside-div {
 	height: 70px;
-	margin-top: 10px;
-	padding: 15px;
-	background-color: rgba(255,255,255,0.90);
+	padding-top: 10px;
 }
 
 #text-inside-h2 {
 	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
-	font-size: 30px;
+	font-size: 20px;
 }
 
 .thumb-div {
-	width: 300px;
-	height: 350px;
+	width: 200px;
+	height: 220px;
 	background-size: cover;
+	padding: 10px 10px 10px 10px;
 	text-align: center;
 	margin-left: 15px;
-	background-color: rgba(255,245,0,0.52);
+	background-color: rgba(234,248,225,1.00);
 
 }
 
 .thumb-inside-div {
 	background-size: auto;
-	width: 100%;
-	height: 190px;
+	width: 150px;
+	height: 150px;
 }
 
 /******************************************************/
