--- a/final_web3/public/css/custom-learning-lesson.css
+++ b/final_web3/public/css/custom-learning-lesson.css
@@ -133,31 +133,41 @@ header {
 
 /* THUMBNAIL */
 #text-inside-div {
-	height: 70px;
-	margin-top: 10px;
-	padding: 15px;
-	background-color: rgba(255,255,255,0.90);
+	height: 50px;
+	padding-top: 10px;
+}
+
+#text2-inside-div{
+	height: 110px;
+	padding-top: 10px;
+	margin-top: 5px;
 }
 
 #text-inside-h2 {
 	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
-	font-size: 30px;
+	font-size: 25px;
+}
+
+#text2-inside-h2 {
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
+	font-size: 20px;
+	color: rgba(153,153,159,1.00);
 }
 
 .thumb-div {
-	width: 300px;
-	height: 350px;
+	width: 200px;
+	height: 250px;
 	background-size: cover;
-	text-align: center;
+	padding: 10px 10px 10px 20px;
 	margin-left: 15px;
-	background-color: rgba(255,245,0,0.52);
+	background-color: rgba(234,248,225,1.00);
 
 }
 
 .thumb-inside-div {
 	background-size: auto;
-	width: 100%;
-	height: 190px;
+	width: 150px;
+	height: 150px;
 }
 
 /******************************************************/
@@ -200,7 +210,6 @@ header {
 	margin-top: 40px;
 	padding-top: 100px
 }
-
 
 /******************************************************/
 
