--- a/final_web3/public/css/custom-learning-question.css
+++ b/final_web3/public/css/custom-learning-question.css
@@ -121,8 +121,8 @@ header {
 
 
 .thumb-div {
-	width: 250px;
-	height: 300px;
+	width: 23%;
+	height: 20%;
 	background-size: cover;
 	padding: 10px 10px 10px 10px;
 	background-color: rgba(255,255,255,1.00);
@@ -134,7 +134,7 @@ header {
 .thumb-inside-div {
 	background-size: auto;
 	width: 100%;
-	height: 230px;
+	height: 240px;
 }
 
 #chapter-inside-div {
